--- a/src/style.css
+++ b/src/style.css
@@ -6,6 +6,7 @@ body{
     display: flex;
     align-items: center;
     flex-wrap: wrap;
+    justify-content: center;
 }
 .photo_gallery h1{
     width: 100%;
@@ -32,13 +33,10 @@ body{
     height: 400px;
     border-radius: 20px 20px 0px 0px;
 }
-.photo_gallery .loader{
- margin:0 auto;
-}
 .loader{
     display: inline-block;
-    width: 80px;
-    height: 80px;
+    width: 60px;
+    height: 60px;
     z-index: 9999;
   }
   .loader:after {
